Use valueOf().